--- a/index.html
+++ b/index.html
@@ -47,18 +47,24 @@
           </div>
         </div>
       </nav>
-      
-    <h1>Hello, world!</h1>
 
-    <h3>Exemplos de badges</h3>
-    <span class="badge text-bg-primary">Primary</span>
-    <span class="badge text-bg-secondary">Secondary</span>
-    <span class="badge text-bg-success">Success</span>
-    <span class="badge text-bg-danger">Danger</span>
-    <span class="badge text-bg-warning">Warning</span>
-    <span class="badge text-bg-info">Info</span>
-    <span class="badge text-bg-light">Light</span>
-    <span class="badge text-bg-dark">Dark</span>
+      <section class="hero py-5">
+        <div class="container">
+            <div class="row allgn-items-center">
+                <div class="col-md-6">
+                    <h1>Criação da Hero Section</h1>
+                    <p>Aula de HTML, CSS e Javascript utilizando Bootstrap. Estou me sentindo meio perdido! Help me!</p>
+                    <a href="#" class="btn btn-primary">Link para Nárnia</a>
+                </div>
+                <div class="col-md-6">
+                    <img src="https://upload.wikimedia.org/wikipedia/pt/b/b4/Corinthians_simbolo.png" alt="Logo Corinthians"
+                class="img-fluid"/>
+                </div>
+
+            </div>
+        </div>
+      </section>
+
 
     <!-- Biblioteca Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -70,6 +76,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+
+        <script src="./assets/scripts/index.scripts.js"></script>
 </body>
 
 </html>
